--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "prettier": "^2.5.1",
+    "standard-version": "^9.5.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
